[package]
name = "electron-cloud-model"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy = "0.18.1"
rand = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
